* Fixed potential memory corruption and exploit issue involving calling CL_ClearParticles with no particles. You would be able to set the four bytes at [80..76] bytes (cl_particles->next) before the 
first particle to NULL
* Fixed a bug where particles could never despawn and would always take up particle slots if alphavel was 0 

REMOVALS:

OTHER CHANGES:

Version 0.0.9 (Build 480)
May 25, 2024

NEW FEATURES:
* Added a nice animated intro to the game - you can turn it off with cl_showintro 0
	* You can change the first and second intro images with the cl_intro1 and cl_intro2 cvars, and change the time (in milliseconds) they take to display with cl_intro1_time and cl_intro2_time cvars
* GL modes are now removed. The game can run at any resolution, and only destroys the window if switching in or out of fullscreen.
	* This is controlled with the new gl_width and gl_height cvars
	* The video menu will display "custom" if a nonstandard height is selected.
* New machine gun weapon model from JV_726 (as a test, no textures yet)
* Changed UI coordinate system from pixels to a normalised (base size is 960*480) 0-1 coordinate system. Size is still in pixels for now
	* This makes the UI system resolution independent
* Made the game window resizable
* Added the ability to send 32-bit colour information over the network
* Particle system changes:
	* Added ability to network generic, flame, smoke, flash, flashlight and steam particle effects
		* These use the following TempEnt values:
		* TE_GENERIC - Generic
		* TE_FLAME - Flame
		* TE_SMOKE - Smoke
		* TE_STEAM - Steam
		* TE_FLASHLIGHT - Flashlight
		* TE_FLASH - Flash (always at the player's location)
	* Removed many obsolete particle effects (see Removals section)
* Rendering API version 9:
	* Made the blending capability available to all pic drawing functions - DrawPic, DrawPicStretch, DrawPicRegion and DrawFill now take an optional (can be NULL) "color" parameter (vec4_t)
	* Remove Vid_GetModeInfo